@@ -20,7 +20,7 @@
       li { list-style: none; padding-left: 6px; }
       @media screen and (min-width: 1140px) {
       #leftColumn { overflow: scroll; height: calc(100vh - 20px);}
-      #centerColumn { }
+      #centerColumn { font-family:monospace; }
       #rightColumn { overflow: scroll;height:  calc(100vh - 20px);}
 
       .tab { overflow:hidden; border; 1px solid #ccc; background-color: #f1f1f1; }
